--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -25,8 +25,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import ipywidgets as widgets\n",
-    "import datapane as dp \n",
     "import plotly.express as px\n",
     "from EquityHedging.datamanager import data_manager as dm\n",
     "from EquityHedging.analytics.util import get_df_weights\n",
@@ -276,13 +274,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "@interact\n",
     "def display_selloffs(weighted=weighted):\n",
@@ -361,7 +352,6 @@
    },
    "outputs": [],
    "source": [
-    "#clean index to display year only\n",
     "annual_dollar_returns = summary.get_annual_dollar_returns(returns, notional_weights)\n",
     "fmt.get_dollar_ret_styler(annual_dollar_returns)"
    ]
@@ -409,17 +399,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equity_hedge_report = 'equity_hedge_analysis_q12021'\n",
+    "equity_hedge_report = 'equity_hedge_analysis_2021q2'\n",
     "selloffs = True\n",
     "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## End"
+   ]
   }
  ],
  "metadata": {
@@ -438,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
