--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c8efc831",
    "metadata": {},
    "source": [
     "# Strategy Report Notebook\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b9a2a56",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -17,26 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "b5afcd8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import ipywidgets as widgets\n",
-    "import datapane as dp \n",
     "import plotly.express as px\n",
     "from EquityHedging.datamanager import data_manager as dm\n",
-    "from EquityHedging.analytics.util import get_df_weights\n",
     "from EquityHedging.analytics import summary\n",
     "from EquityHedging.reporting.excel import reports as rp\n",
     "from EquityHedging.reporting import formatter as fmt, plots\n",
-    "from ipywidgets import interact, interact_manual\n",
-    "from EquityHedging.reporting.excel import sheets\n",
-    "import os"
+    "from ipywidgets import interact, interact_manual"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a344d57a",
    "metadata": {},
    "source": [
     "## Import Daily, Weekly, Monthly, Quarterly and Yearly Returns Data for Equity Benchmark\n",
@@ -47,7 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "d12c51fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +58,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6987c181",
    "metadata": {},
    "source": [
     "## Import Daily, Weekly, Monthly, Quarterly and Yearly Returns Data for a Strategy\n",
@@ -70,28 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "fccadab0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\Bloomberg\\\\Projects\\\\RMP\\\\EquityHedging\\\\data\\\\new_strats\\\\Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-47ef9d45d8b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m new_data= dm.get_new_strategy_returns_data( report_name = \"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", \n\u001b[0m\u001b[0;32m      2\u001b[0m                                            sheet_name = \"data\")\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#create returns data dictionary for strategy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mnew_data_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_data_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_data\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'index'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Projects\\RMP\\EquityHedging\\datamanager\\data_manager.py\u001b[0m in \u001b[0;36mget_new_strategy_returns_data\u001b[1;34m(report_name, sheet_name, strategy_list)\u001b[0m\n\u001b[0;32m    360\u001b[0m     \u001b[0mdataframe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    361\u001b[0m     \"\"\"\n\u001b[1;32m--> 362\u001b[1;33m     \u001b[0mdf_strategy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNEW_DATA\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mreport_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msheet_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex_col\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    363\u001b[0m     \u001b[0mdf_strategy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_real_cols\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_strategy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    364\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mstrategy_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, verbose, parse_dates, date_parser, thousands, comment, skipfooter, convert_float, mangle_dupe_cols, **kwds)\u001b[0m\n\u001b[0;32m    302\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    303\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mExcelFile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 304\u001b[1;33m         \u001b[0mio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mExcelFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    305\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    306\u001b[0m         raise ValueError(\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, io, engine)\u001b[0m\n\u001b[0;32m    822\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_io\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstringify_path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    823\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 824\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engines\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_io\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    825\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    826\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__fspath__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_xlrd.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, filepath_or_buffer)\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0merr_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Install xlrd >= 1.0.0 for Excel support\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mimport_optional_dependency\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"xlrd\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, filepath_or_buffer)\u001b[0m\n\u001b[0;32m    351\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbook\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_workbook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    352\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 353\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbook\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_workbook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    354\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbytes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    355\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbook\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_workbook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBytesIO\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\excel\\_xlrd.py\u001b[0m in \u001b[0;36mload_workbook\u001b[1;34m(self, filepath_or_buffer)\u001b[0m\n\u001b[0;32m     34\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mopen_workbook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_contents\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mopen_workbook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\xlrd\\__init__.py\u001b[0m in \u001b[0;36mopen_workbook\u001b[1;34m(filename, logfile, verbosity, use_mmap, file_contents, encoding_override, formatting_info, on_demand, ragged_rows)\u001b[0m\n\u001b[0;32m    109\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m         \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m             \u001b[0mpeek\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpeeksz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mpeek\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34mb\"PK\\x03\\x04\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# a ZIP file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\Bloomberg\\\\Projects\\\\RMP\\\\EquityHedging\\\\data\\\\new_strats\\\\Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_data= dm.get_new_strategy_returns_data( report_name = \"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", \n",
     "                                           sheet_name = \"data\")\n",
@@ -105,6 +87,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2abac9d5",
    "metadata": {},
    "source": [
     "## View Returns Data\n",
@@ -114,6 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "416b71a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +109,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f97de090",
+   "metadata": {},
+   "source": [
+    "# Compute Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97a9e12e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_freq_list = ['Weekly', 'Monthly']\n",
+    "corr_dict = summary.get_corr_data(ret_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee85050c",
+   "metadata": {},
+   "source": [
+    "# Display Correlations\n",
+    "\n",
+    "Display Correlations of returns data by:\n",
+    "* **frequency (Monthly or Weekly)** - Show correlations of Monthly or Weekly returns\n",
+    "* **corr** - Show:\n",
+    "    * **corr** - full history correaltions\n",
+    "    * **corr_down** - risk seeking benchmark downside returns correlations or \n",
+    "    * **corr_up** - risk seeking benchmark upside returns correlations\n",
+    "* **plot_type (corrplot or heatmap)** - Show a map with magnitude or just heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e06ba4db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_correlations(frequency=corr_freq_list,\n",
+    "                         corr=['corr', 'corr_down', 'corr_up'], plot_type=['heatmap', 'corrplot']):\n",
+    "    data = corr_dict[frequency]\n",
+    "    corr_df = data[False][corr][0]\n",
+    "    if plot_type == 'heatmap':\n",
+    "        return plots.draw_heatmap(corr_df, half=False)\n",
+    "    else:\n",
+    "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "614c7916",
    "metadata": {},
    "source": [
     "## Compute Return Stats and hedge Metrics"
@@ -133,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a5600ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +181,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6154a94c",
    "metadata": {},
    "source": [
     "## Display Return Stats and Hedge Metrics\n",
@@ -155,6 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebb173f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,55 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compute Correlations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_freq_list = ['Weekly', 'Monthly']\n",
-    "corr_dict = summary.get_corr_data(ret_data_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Display Correlations\n",
-    "\n",
-    "Display Correlations of returns data by:\n",
-    "* **frequency (Monthly or Weekly)** - Show correlations of Monthly or Weekly returns\n",
-    "* **corr** - Show:\n",
-    "    * **corr** - full history correaltions\n",
-    "    * **corr_down** - risk seeking benchmark downside returns correlations or \n",
-    "    * **corr_up** - risk seeking benchmark upside returns correlations\n",
-    "* **plot_type (corrplot or heatmap)** - Show a map with magnitude or just heatmap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def display_correlations(frequency=corr_freq_list,\n",
-    "                         corr=['corr', 'corr_down', 'corr_up'], plot_type=['heatmap', 'corrplot']):\n",
-    "    data = corr_dict[frequency]\n",
-    "    corr_df = data[False][corr][0]\n",
-    "    if plot_type == 'heatmap':\n",
-    "        return plots.draw_heatmap(corr_df, half=False)\n",
-    "    else:\n",
-    "        return plots.draw_corrplot(corr_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "78d6a3e9",
    "metadata": {},
    "source": [
     "## Compute Historical Sell Offs"
@@ -230,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a6ca4b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +232,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1424dc6b",
    "metadata": {},
    "source": [
     "## Display Historical Sell Offs"
@@ -246,6 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c3677d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +253,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45dd267a",
    "metadata": {},
    "source": [
     "## Compute Quintile or Decile Analysis\n",
@@ -267,6 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "70018c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +277,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6c5c302",
    "metadata": {},
    "source": [
     "## Display Quintile or Decile Analysis\n",
@@ -290,6 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bec240d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd2d66dd",
    "metadata": {},
    "source": [
     "# Create Report\n",
@@ -328,6 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9637c5b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
