--- a/Things-To-Do.ipynb
+++ b/Things-To-Do.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "1. **Get code to github**:\n",
-    "    * Create new repository with code base and test to make sure it can work successfully on a separate machine"
+    "    * Create new repository with code base and test to make sure it can work successfully on a separate machine (Done)"
    ]
   },
   {
@@ -20,8 +20,8 @@
    "metadata": {},
    "source": [
     "2. **Write down instructions to get correct environment**:\n",
-    "    * How to install Anaconda\n",
-    "    * What libraries to import\n",
+    "    * How to install Anaconda (Done)\n",
+    "    * What libraries to import (Done)\n",
     "    * Any trouble shooting info\n",
     "\n"
    ]
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "3. **Add testing**:\n",
-    "    * Create unit tests to ensure project does not break when we add new code\n",
+    "    * Create unit tests to ensure project does not break when we add new code (Started)\n",
     "\n"
    ]
   },
@@ -40,8 +40,8 @@
    "metadata": {},
    "source": [
     "4. **Include bloomberg api**:\n",
-    "    * Write code to feed bloomberg data directly especialy for new stategies\n",
-    "    * Maybe find ways to incorpoate bloomberg analytics\n",
+    "    * Write code to feed bloomberg data directly especialy for new stategies (Done)\n",
+    "    * Maybe find ways to incorpoate bloomberg analytics (BQUANT)\n",
     "\n"
    ]
   },
@@ -51,8 +51,8 @@
    "source": [
     "5. **Add more analytics and visuals**:\n",
     "    * Rolling Correlations\n",
-    "    * Improve hedge Metrics\n",
-    "    * Add bottom SPTR 10 quarters bar chart\n",
+    "    * Improve hedge Metrics (Started)\n",
+    "    * Add bottom SPTR 10 quarters bar chart (Done)\n",
     "    * Look into different weighting (not just notional, 1/k variance etc.)\n",
     "    \n"
    ]
@@ -62,8 +62,9 @@
    "metadata": {},
    "source": [
     "6. **Add more notebooks**:\n",
-    "    * Notebook comparing similar strategies from different banks\n",
-    "    * Derivatives Notebook\n"
+    "    * Notebook comparing similar strategies from different banks (Done)\n",
+    "    * Derivatives Notebook\n",
+    "    * Hedging Frmaework Model Notebook (Started)\n"
    ]
   },
   {
@@ -107,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
