--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -440,7 +440,8 @@
    "source": [
     "equity_hedge_report = 'equity_hedge_analysis_2021q2'\n",
     "selloffs = True\n",
-    "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
+    "grouped = False\n",
+    "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs, grouped)"
    ]
   },
   {
@@ -467,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "varInspector": {
    "cols": {
