--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -99,18 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5b2bf1f66a545cf906dd3f3409b1c12",
+       "model_id": "fa9dc5c032f44ecd86844309b38d5630",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='strategy', options=('Down Var', 'VOLA', 'Dynamic Put Spread', 'VRR…"
+       "interactive(children=(Dropdown(description='strategy', options=('SPTR', 'Down Var', 'VOLA', 'Dynamic Put Sprea…"
       ]
      },
      "metadata": {},
@@ -118,10 +118,10 @@
     }
    ],
    "source": [
-    "strat_list=['Down Var','VOLA', 'Dynamic Put Spread', 'VRR', 'GW Dispersion','Corr Hedge','Def Var']\n",
+    "strat_list=['SPTR','Down Var','VOLA', 'Dynamic Put Spread', 'VRR', 'GW Dispersion','Corr Hedge','Def Var']\n",
     "@interact\n",
     "def display__monthly_ret_table(strategy = strat_list):\n",
-    "    month_table= dm.month_ret_table(returns, strategy = strategy)\n",
+    "    month_table= dm.month_ret_table(returns['Monthly'], strategy = strategy)\n",
     "    return fmt.get_monthly_ret_table_styler(month_table)"
    ]
   },
