--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -314,7 +314,7 @@
     "group_list=['Quintile','Decile']\n",
     "@interact\n",
     "def display_returns(group = group_list):\n",
-    "    quintile_df = summary.get_grouped_data(returns, group = group)\n",
+    "    quintile_df = summary.get_grouped_data(returns['Monthly'], group = group)\n",
     "    return(quintile_df.style.format(\"{:.2%}\"))"
    ]
   },
@@ -338,7 +338,7 @@
     "@interact\n",
     "\n",
     "def display_quintile_analysis(group = group_list, strat=list(returns['Monthly'].select_dtypes('float').columns)[1:]):    \n",
-    "    df = summary.get_grouped_data(returns, group = group)\n",
+    "    df = summary.get_grouped_data(returns['Monthly'], group = group)\n",
     "    \n",
     "    for col in df.columns:\n",
     "        df[col] *= 100\n",
@@ -453,7 +453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -467,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.12"
   },
   "varInspector": {
    "cols": {
