--- a/Liq_Alts/benchmarking-II.ipynb
+++ b/Liq_Alts/benchmarking-II.ipynb
@@ -51,22 +51,14 @@
    "source": [
     "bmk_df = pd.read_excel(dm.RETURNS_DATA_FP + 'liq_alts\\\\bmk_data.xlsx', sheet_name='data_m', index_col=0)\n",
     "bmk_df = bmk_df[['HFRXM Index','HFRIMI Index',\n",
-    "                 'SGSLRPEW Index', 'SGSLRPWH Index', 'SGIXTFXA Index', 'NEIXCTAT Index',\n",
-    "                 'HFRXAR Index', 'HFRXEH Index', 'HFRXEW Index', 'HFRXED Index',\n",
-    "                 'HFRXCA Index', 'HFRXEMC Index', 'HFRXCOM Index',\n",
-    "                 'SECTGLMA Index', 'SECTNEUT Index','SECTMSTR Index',\n",
-    "                 'HEDGGLMA Index', 'HEDGNAV Index','HEDGNEUT Index','HEDGCONV Index',\n",
-    "                 'CSLAB Index', 'CSLABED Index', 'CSLABGS Index', 'CSLABMF Index',\n",
-    "                 'CSLABT15 Index', 'CSLABT18 Index', 'CSLABT20 Index']]\n",
+    "                  'SGIXTFXA Index', 'NEIXCTAT Index',\n",
+    "                 'HFRXAR Index', 'HFRXEW Index', \n",
+    "                 'HEDGGLMA Index', 'CSLABT18 Index']]\n",
     "#rename columns\n",
     "bmk_df.columns = ['HFRX Macro/CTA', 'HFRI Macro Total Index',\n",
-    "                  'Eqty Risk Prem', 'Eqty Risk Prem-Hedged','SGI Cross Asset Trend', 'SG Trend Index',\n",
-    "                  'HFRX Abs Ret', 'HFRX Eqty Hedge', 'HFRX Equal Wgtd', 'HFRX Event Driven',\n",
-    "                  'HFRX RV FI Conv Arb', 'HFRX EM', 'HFRX Macro Comdty',\n",
-    "                  'CS AllHedge Global Macro', 'CS AllHedge Eqty Mkt Neutral','CS AllHedge Multi_Strat',\n",
-    "                  'CS Global Macro', 'CS Hedge Fund', 'CS Eqty Mkt Neutral', 'CS Conv Arb',\n",
-    "                 'CS Liq Alt Beta', 'CS Event Driven', 'CS Global Strat', 'CS Managed Fut',\n",
-    "                 'CS Managed Fut-15% vol','CS Managed Fut-18% vol', 'CS Managed Fut-20% vol']\n",
+    "                  'SGI Cross Asset Trend', 'SG Trend Index',\n",
+    "                  'HFRX Abs Ret', 'HFRX Equal Wgtd', \n",
+    "                  'CS Global Macro', 'CS Managed Fut-18% vol']\n",
     "\n",
     "#format data to returns\n",
     "bmk_df = dm.format_data(bmk_df)"
@@ -109,7 +101,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bdf7847",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "@interact\n",
@@ -166,8 +160,11 @@
     "    liq_alts_dict[key] = liq_alts_df[sp_mgr_dict[key]].copy()\n",
     "    liq_alts_dict[key].dropna(inplace=True)\n",
     "\n",
+    "# sp_df = liq_alts_df[['Total Liquid Alts']]\n",
+    "\n",
     "for key in liq_alts_dict:\n",
-    "    liq_alts_dict[key][key] = liq_alts_dict[key].sum(axis=1)/len(liq_alts_dict[key].columns)"
+    "    liq_alts_dict[key][key] = liq_alts_dict[key].sum(axis=1)/len(liq_alts_dict[key].columns)\n",
+    "#     sp_df = dm.merge_data_frames(sp_df,liq_alts_dict[key][[key]])\n"
    ]
   },
   {
@@ -366,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "varInspector": {
    "cols": {
