--- a/Cluster Analysis/scripts/SG_Clusters_QIS_Academy_30th_June_22.ipynb
+++ b/Cluster Analysis/scripts/SG_Clusters_QIS_Academy_30th_June_22.ipynb
@@ -325,6 +325,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_returns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15344/3016432630.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX_returns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_returns' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_returns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
@@ -452,7 +473,10 @@
     }
    ],
    "source": [
-    "X_Kmeans"
+    "X_Kmeans\n",
+    "\n",
+    "#make x_axis all time series data for returns \n",
+    "#make y_axis returns for NEIXCTAT and repeat for amnt of cols"
    ]
   },
   {
@@ -960,7 +984,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -974,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
